removed old links

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Bubble Chart</a></li>
+        <!-- <li><a href="#">Bubble Chart</a></li>
         <li><a href="#">Distance</a></li>
-        <li><a href="#">Data</a></li>
+        <li><a href="#">Data</a></li> -->
       </ul>
     </div>
   </nav>
 
 <div id="tooltip">
 <h3 class="tooltip-title"></h3>
-<div class="tooltip-container"></div>
+<!-- <div class="tooltip-container"></div> -->
 <div class="tooltip-tail"></div>
 </div>
 <div id="planetarium"></div>
